--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.8",
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.8.2",
+        "bootstrap": "^5.3.0",
         "concurrently": "^9.0.1",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.2.0",
+        "sass": "^1.86.1",
+        "sass-loader": "^16.0.5",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
     }
